--- a/primecrew/pyproject.toml
+++ b/primecrew/pyproject.toml
@@ -5,9 +5,12 @@ description = "PrimeCrew using crewAI"
 authors = [{ name = "Your Name", email = "you@example.com" }]
 requires-python = ">=3.10,<3.14"
 dependencies = [
+    "apscheduler>=3.11.1",
     "crewai[tools]==1.7.0",
     "fastapi>=0.124.2",
+    "fastapi-sso>=0.17.0",
     "litellm>=1.75.3",
+    "pydantic[email]>=2.11.10",
 ]
 
 [project.scripts]
